[JSC] validateAIState should ignore EnumeratorNextUpdateIndexAndMode when asking for AbstractValue https://bugs.webkit.org/show_bug.cgi?id=256263 rdar://108693426

Reviewed by Yusuke Suzuki.

According to https://github.com/WebKit/WebKit/commit/39dd6c8334a66035cb396c8593a28dfca2b50f5e
"DFG tuples don't have a type themselves, they represent a collection of
elements." Function validateAIState should stop asking for AbstractValue from
EnumeratorNextUpdateIndexAndMode node.

* JSTests/stress/dfg-tuple-validate-ai-state.js: Added.
* Source/JavaScriptCore/dfg/DFGAbstractInterpreter.h:
(JSC::DFG::AbstractInterpreter::hasClearedAbstractState):
* Source/JavaScriptCore/dfg/DFGInPlaceAbstractState.h:
(JSC::DFG::InPlaceAbstractState::hasClearedAbstractState):
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::validateAIState):

Canonical link: https://commits.webkit.org/263650@main