JSTests/stress/dfg-tuple-validate-ai-state.js
@@ -1,0 +1,3 @@
+//@ runDefault("--validateAbstractInterpreterState=1")
+for (let i = 0; i < 100000; i++)
+    for (let x in 'a');
